--- a/notebooks/03_storage.ipynb
+++ b/notebooks/03_storage.ipynb
@@ -64,7 +64,7 @@
                 "    id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
                 "    title TEXT,\n",
                 "    author TEXT,\n",
-                "    year TEXT,\n",
+                "    year SMALLINT,\n",
                 "    edition TEXT,\n",
                 "    publisher TEXT,\n",
                 "    isbn TEXT UNIQUE,\n",
